# pyrepomanager

./: README.md  delete_gh_repos.py  pyproject.toml
GhConnect/: __init__.py
src/pyrepomanager/: GHConnect.py  PyRepoManager.py  Repository.py  __init__.py  check_packages.py  excepitions.py
