[project]
name = "pyrepomanager"
version = "0.0.1"
authors = [
  { name="Kauã Lima", email="kaualimadev@gmail.com" },
]
description = "Repo Manager is a project management package on GitHub"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kauasdev/pyrepomanager"
"Bug Tracker" = "https://github.com/kauasdev/pyrepomanager/issues"